<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".EditMedicine"
                                                   android:id="@+id/frameLayout"
                                                   android:background="#DCEDC8"
        >

    <TextView
            android:text="@string/label_regular_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_medicine_name"
            app:layout_constraintStart_toStartOf="@+id/input_medicine_name"
            android:layout_marginStart="8dp"
            android:textColor="#B2000000"/>

    <EditText
            android:layout_width="253dp"
            android:layout_height="53dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input_medicine_name"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="Medicine Name"
            android:singleLine="false"/>

    <TextView
            android:text="@string/label_adjust_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:textColor="#B2000000"/>

    <EditText
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            android:textAlignment="textEnd"/>

    <EditText
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText6"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            android:textAlignment="textEnd"
            />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="142dp"/>

    <TextView
            android:text="@string/label_adjust_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/editText6"
            app:layout_constraintBottom_toBottomOf="@+id/editText6"
            app:layout_constraintStart_toEndOf="@+id/editText6"
            app:layout_constraintVertical_bias="0.8"
            android:textColor="#B2000000"/>

    <TextView
            android:text="@string/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/editText4"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintStart_toEndOf="@+id/editText4"
            app:layout_constraintVertical_bias="0.8"
            android:textColor="#B2000000"/>

    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            />

    <Button
            android:text="@string/label_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/save_medicine"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            style="@android:style/Widget.Material.Button.Borderless"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="#1B5E20"/>

    <Button
            android:text="@string/label_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:textColor="#1B5E20"/>

</androidx.constraintlayout.widget.ConstraintLayout>